@@ -1,3 +1,8 @@
+2010-06-28  Mike Frysinger  <vapier@gentoo.org>
+
+  * configure.ac (usbblaster): Move from libftdi to libusb requirement.
+  * src/tap/cable/usbblaster.c: Convert from FTDX helpers to libusb helpers.
+
 2010-06-24  Mike Frysinger  <vapier@gentoo.org>
 
   * configure.ac: Merge libusb-0.x and libusb-1.x variables so that "libusb"
